assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Mukta&family=lato:wght@300&display=swap');
   
*  { 
  margin: 0;
  padding: 0;
  border: none;
}
    

body {
  font-family: lato, sans-serif;
  font-weight: 300;
  color: #3d3736;
  background-color: #f2ede3;
}

p {
  font-size: 1.25em;
}

h1,
h2,
h3 {
  font-family: mukta, sans-serif;

}


/*....................................navbar and logo */

nav {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  background-color: #727778;
  justify-content: space-between;
  overflow: auto;
  min-height: 6.25rem;  
  }

nav ul li {
  position: relative;
  margin: 0 30px;
  list-style: none;
  display: inline-block;
  padding: 25px;
  font-size: 16px;   
  }

  nav ul li a {
  font-family: mukta, sans-serif;
  font-weight: 600;
  font-size: 105%;
  color:#000000;
  text-decoration: none;  
  border-color: #000000;
}

#navbar-logo{
  height: 52px;
  border-radius: 50%;
  margin-top: -32px;
  padding-left: 40px   
}

/*....................................active link and hover styling */

#menu a:hover {
  color: #d8b16e;
}

/*....................................hero image and slogan */

#hero-image {
  background-image: url("../images/austin-ramsey-nmXi-HCD_F8-unsplash.jpg");
  width: 100%;
  height: 500px;
  opacity: 0.9;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}


#cover-text {
  position: relative;
  text-align: center;
  font-size: 250%;
  padding-top: 3.25em;
  letter-spacing: 4px  
}

#cover-text-about {
  position: relative;
  text-align: center;
  font-size: 250%;
  padding-top: 4.5em;
  letter-spacing: 4px;  
}

#cover-text-services {
  position: relative;
  text-align: center;
  font-size: 250%;
  padding-top: 4.5em;
  letter-spacing: 4px; 
}

.bespoke {
  color: #451400f5 ;
}

.reliable {
  color:#f2ede3;
}
/*.................................... services section */
.services-text {
  display: flex;
  justify-content: center;
  padding: 20px 20px 0px;
}

.services-button {
  font-family: mukta, sans-serif;
  position: relative;
  text-align: center;
  border: transparent none;
  font-size: 300%;
  font-weight: 600;
  letter-spacing: 2px;
  color: #670101;
  text-decoration: none;
  padding-top: 20px;
}

.services-button:hover {
  color: #d8b16e;
}

 hr {
  border-top: 4px solid #d8b16e;
  width: 60px;
  border-radius: 2px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 20px;
}

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(350px, 3fr));
  margin: 0 auto;
  column-gap: 40px;
  row-gap: 40px;
  padding: 20px 50px;
}
  

.grid h2 {
  font-family: mukta, sans-serif;
  padding-top: 10px;
  font-weight: 500;
  text-align: center;
  color: #670101;
}
  
  
.services-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(350px, 3fr));
  margin: 0 auto;
  column-gap: 40px;
  row-gap: 40px;
  padding: 20px 50px;
} 
  

.services-grid h2 {
  font-family: mukta, sans-serif;
  padding: 10px;
  font-weight: 500;
  text-align: center;
  color: #670101; 
}

.joinery-container {
  border: 20px solid #ffffff;
  border-radius: 10px;
  background-color: #ffffff;
}
.joinery-container h2 {
  display:flex;
  justify-content: center;
  flex-wrap: wrap;
  background-color: #ffffff;
}
.joinery-container h4 {
  display: flex;
  justify-content: center;
  font-family: mukta, sans-serif;
  padding: 10px;
  font-weight: 200;
  color: #000000;
}
  
  /*.................................... testimonials section */

#testimonials {
  display: flex;
  justify-content: center;
  padding-top: 40px;
  padding-bottom: 20px;
  font-size: 300%;
  font-weight: 500;
  letter-spacing: 1px;
  color: #670101;
}

.test-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(350px, 3fr));
  margin: 0 auto;
  column-gap: 40px;
  padding: 20px 50px 50px 50px;
      
}
.test-grid h2 {
  font-family: mukto, sans-serif;
  padding-top: 75px;
  padding-bottom: 20px;
  font-weight: 500;
  text-align: center;
  color: #670101
}

.test-grid p {
  padding: 20px;
  font-size: 90%;
}

.test-grid h5 {
  text-align: center;
}

.test-1 {
  border: 20px solid #f2ede3;
  background-color: #fff;
}
    
.test-2 {
  border: 20px solid #f2ede3;
  background-color: #fff;
}
    
.test-3 {
  border: 20px solid #f2ede3;
  background-color: #fff;
}
  
.checked {
  text-align: center;
  padding-top: 10px;
  color: #d8b16e;
}

/*.................................... about page and progress bar */

.grid-about{
  display: grid;
  grid-template-columns:repeat(2, 1fr);
  min-height: 600px;
  min-width: 1200px;
  margin: 0 auto;
  column-gap: 3.25em;
  row-gap: 6.5em;
  padding: 4em;

}
  
.grid-about h2 {
  font-family: mukto, sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
  font-weight: 500;
  font-size: 200%;
  text-align: center;
  color: #670101;
}

.ex-img {
  display: flex;
  align-items: center;
  justify-content: center;
  border: 40px solid #ffffff;
  border-radius: 10px;
  background-color: #ffffff;
}


.experience {
  border: 40px solid #fff;
  border-radius: 10px;
}
.grid-about h4 {
  font-family: mukta, sans-serif;
  padding: 20px;
  font-weight: 200;
  color:#000000;
}

#progress-bar-section{
  display: flex;
  justify-content: space-around;
  padding: 75px 75px 150px 75px;
  
}
#progress-bar-section img {
  max-width: 100%;
  
}


#progress-bar-section h3 {
  text-align: center;
    color: #670101;
}

.progress-bar-1 {
  position: relative;
  width: 40rem;
  height: 24px;
  padding-left: 4px;
  padding-top: 4px;
  background: #fff;
  border-radius: 25px;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.1);
  box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.2);
  border: 1px solid #d8b16e;
  
}

.progress-bar-1 span {
  position: absolute;
  display:inline-block; 
  vertical-align: middle;
  height: 20px;
  border-radius: 12px;
  background-color: #670101;
  animation: progress-bar-1 10s ease;
}

.progress-bar-2 {
  position: relative;
  width: 40rem;
  height: 24px;
  padding-left: 4px;
  padding-top: 4px;
  background: #fff;
  border-radius: 25px;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.1);
  box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.2);
  border: 1px solid #d8b16e;
}

.progress-bar-2 span {
  position: absolute;
  display:inline-block; 
  vertical-align: middle;
  height: 20px;
  border-radius: 12px;
  background-color: #670101;
  animation: progress-bar-1 13s ease;
}


@keyframes  progress-bar-2 {
  0% {
    width: 10%;
  }
  
  90% {
    width: 90%;
  }
}

@keyframes  progress-bar-1 {
  0% {
    width: 10%;
  }
  
  95% {
    width: 95%;
  }
}
/*.................................... contact section */

.contact-us {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
  justify-items: center;
  margin: 0 auto;
  column-gap: 8.75rem;
  row-gap: 6.5em;
  padding: 125px;
}

#contact-hero {
  background: url(../images/benjamin-thomas-idEEZ-wQkfA-unsplash.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}


.contact-us h2{
  text-transform: uppercase;
  color: #0d1b1e;
  text-align: center;
  font-size: 180%;
  padding-top: 12px;
}
.contact-left{
  color: #0d1b1e;
  background-color: rgba(255, 255, 255, 0.339);
  width: 450px;
  border-radius: 10px;
  padding: 5px;
}

.text {
  background:rgba(255, 255, 255, 0.904);
  font-family: mukto, sans-serif;
  font-size: 100%;
  font-weight: 200;
  width: 93%;
  margin: 8px;
  padding: 8px;
  border-radius: 5px;
}

.text-box {
  height: 125px;
  resize: none;
}

.button {
  text-align: center;
  font-size: 100%;
  padding: 15px;
  color: #ffffff;
  background-color: #6e5e51;
  border-radius: 5px;
  margin: 10px 10px 50px 300px;
  border: 1px solid black;
}

.button:hover {
  background-color: #625842;
}

#contact-right h2 {
  padding-bottom: 40px;
}

.contact-right {
  color: #0d1b1e;
  background-color: rgba(255, 255, 255, 0.339);
  width: 450px;;
  width: 450px;
  border-radius: 10px;
  padding: 5px;
}
 
.contact-right li{
  list-style-type: none;
  font-size: 120%;
  padding-left: 15px;
  font-weight: 500;
  display: flex;
  justify-content: space-around;
}

.contact-right img{
  padding: 20px 85px 50px 85px;
}

.location-map {
  display: grid;
  grid-template-columns: 1fr;
}

#location-map {
  width: 100%;
  border: 40px solid #d1cec9;
}
/*.................................... footer content */
  
.footer-grid {
  display: flex;
  flex-direction: row;
  background-color: #727778;
  height: 300px;
  width: auto;
  overflow: hidden;
}

.footer-grid h3 {
  text-align: center;
  color: #f2ede3;
  padding-top: 20px;
  padding-bottom: 20px;
}

.footer-grid ul li {
  margin: 0;
  list-style: none;
  display: inline;

}

.footer-left {
  flex-grow: 1;
  flex-basis: 100%;
}
.footer-middle {
  flex-grow: 1;
  flex-basis: 100%;
}
  
.footer-right {
  flex-grow: 1;
  flex-basis: 100%;
}

.footer-text li{
  margin: 0;
  padding: 0;
  color: #0d1b1e;
  line-height: 1.5em;
  padding-left: 9.25em;  
}

#socials i {
  font-size: 300%;
  padding-left:75px;
  padding-top: 75px;
  color: #0d1b1e;
}

.footer-grid h3 i{
  color: #0d1b1e;
  font-size: 150%;
  padding-left: 0.5em;
}

/*.................................... media queries */

 @media screen and (max-width: 576px)
 {
    nav ul li{
    margin: 0.2em;
    font-size: 12px;
    padding: 18px;
  }

  #navbar-logo {
    padding: 70px 0px 75px 0px;
    margin-left: auto;
    margin-right: auto;
  }

  #cover-text {
    font-size: 35px;
  }
  .grid-about,
  .services-grid,
  .grid,
  .test-grid
  {
    display: inline;
    padding: 0px;
  }  

  .contact-us {
    display: inline;
  }

  .contact-left,
  .contact-right {
    width: auto;
  }

  .test-1,
  .test-2,
  .test-3 {
    padding-bottom: 5rem;

  }

  
  .grid img,
  .services-grid img {
    justify-items: center;
    width: 100%;
    height: 100%;
  }

  #progress-bar-section {
    display: grid;
    padding-bottom: 6rem;
  }

  #progress-bar-section img {
    padding-bottom: 3rem;
  }

  .progress-bar-1,
  .progress-bar-2 {
    width:auto;

  }

 .footer-grid {
  flex-direction: column;
  height: auto;
  align-items: center;
 }

 .footer-grid ul {
  width: 400px;
 }
 
 #socials i {
  font-size: 220%;
  padding: 0px 40px 35px 40px;
 }
}
 
  @media screen and (max-width: 768px)
  {
    nav ul li{
      margin: 0.6em;
      font-size: 14px;
      padding: 18px;
    }
  
  .services-grid {
    padding: 0%;
    background-color: #fff;
    column-gap: 0%;
  }
  
  .grid{
    padding: 5% 15% 0% 15%;
  }

  .grid img {
    width: 100%;
  }
  .services-grid img{
    width: 100%;
    justify-self: center;
    
  }
  .grid-about {
    display: inline;
    margin: 40px;
  }

  .grid-about img {
    width: 90%;
  }

  .test-grid{
    display:inline;

  }
  
  .test-1,
  .test-2,
  .test-3 {
    padding-bottom: 5em;
  }

  #progress-bar-section {
    display: grid;
    padding-bottom: 6rem;
  }

  #progress-bar-section img {
    padding-bottom: 3rem;
  }

  .progress-bar-1,
  .progress-bar-2 {
    width: auto;
  }
  
  .footer-grid {
    flex-direction: row;
    height: auto;
    align-items: center;
    
   }

   .footer-text li{
    line-height: 1.5em;
    padding: 2em;  
   
  }
   
   #socials i {
    font-size: 220%;
    padding: 8%;
   }
  
      
  @media screen and (max-width: 1300px)

  {

  }
  

